fixed overflow issue in firefox

--- a/css/demo.css
+++ b/css/demo.css
@@ -1,3 +1,7 @@
+html {
+    overflow: hidden;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -9,7 +13,7 @@ body {
 }
 
 #graph-view-wrapper{
-    height: 100%;
+    height: inherit;
     width: 100%;
 }
 
